[gd_scene load_steps=6 format=3 uid="uid://cmsiho67xk03p"]

[ext_resource type="Script" uid="uid://b0g8wtar8xbcn" path="res://items/weapon.gd" id="1_16ic1"]
[ext_resource type="Resource" uid="uid://bm60l0uekjv1o" path="res://items/weapons/shotgun/pellet_stats.tres" id="2_aojlq"]
[ext_resource type="Script" uid="uid://5nf8qiekyyrw" path="res://systems/components/targeting_component.gd" id="3_8lrk6"]
[ext_resource type="PackedScene" uid="uid://bi2e3pkfcknbt" path="res://systems/components/weapon_stats_component.tscn" id="4_lg0co"]
[ext_resource type="Script" uid="uid://dv28jcxv7jbak" path="res://systems/components/fire_behavior_component.gd" id="5_18ouq"]

[node name="Shotgun" type="Node2D"]
script = ExtResource("1_16ic1")
projectile_stats = ExtResource("2_aojlq")
base_projectile_count = 10
base_fire_rate = 4.0

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TargetingComponent" type="Node" parent="."]
script = ExtResource("3_8lrk6")
metadata/_custom_type_script = "uid://5nf8qiekyyrw"

[node name="WeaponStatsComponent" parent="." instance=ExtResource("4_lg0co")]

[node name="FireBehaviorComponent" type="Node" parent="."]
script = ExtResource("5_18ouq")
pattern = 1
burst_delay = 0.0
metadata/_custom_type_script = "uid://dv28jcxv7jbak"
